--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="cssIndex.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500" rel="stylesheet">
-    <title>Document</title>
+    <title>Portofolio</title>
 </head>
 <body>
 
@@ -19,9 +19,9 @@
 </div>
 
 <div id="Gifs">
-    <a href="https://github.com/RiceDemolisher/CSS-Challenge-Taran"><img src="img/1.gif"></a>
-    <a href="https://github.com/RiceDemolisher/ChallengeVoorjaar-Taran/tree/master/K5"><img src="img/2.gif"></a>
-    <a href="https://github.com/RiceDemolisher/Challenge8April-Taran"><img src="img/3.gif"></a>
+    <a href="https://github.com/TaranJSJ/CSS-Challenge-Taran"><img src="img/1.gif"></a>
+    <a href="https://github.com/TaranJSJ/ChallengeVoorjaar-Taran/tree/master/K5"><img src="img/2.gif"></a>
+    <a href="https://github.com/TaranJSJ/Challenge8April-Taran"><img src="img/3.gif"></a>
 </div>
 
 <div id="Text">
